# patchguard

./: .gitignore  .patchguard.yml  LICENSE  Makefile  README.md  action.yml  pyproject.toml  render.yaml
backend/: pyproject.toml  requirements.txt
backend/patchguard/: __init__.py  api_app.py  app_models.py  cli.py  config.py  models.py
backend/patchguard/services/: __init__.py  ai_review_service.py  clone_service.py  contract_extraction_service.py  demo_report_service.py  diff_service.py  evidence_planner_service.py  function_extractor.py  github_actions_service.py  github_app_auth_service.py  github_app_backfill_service.py  github_app_check_service.py  github_app_job_service.py  github_app_webhook_service.py  (+11 more)
backend/tests/: test_ai_review_service.py  test_api_app.py  test_cli.py  test_clone_service.py  test_command_runner.py  test_contract_extraction_service.py  test_demo_report_service.py  test_evidence_planner_service.py  test_function_extractor.py  test_github_actions_service.py  test_github_app_auth_service.py  test_github_app_backfill.py  test_github_app_check_service.py  test_github_app_dashboard_api.py  test_github_app_installations.py  test_github_app_job_service.py  test_github_app_pr_jobs.py  test_github_app_store.py  test_github_app_webhook.py  test_github_service.py  test_markdown_report_service.py  test_memory_service.py  test_policy_service.py  test_pr_comment_service.py  test_prompt9_pipeline.py  test_risk_score_service.py  test_sandbox_service.py  test_security_scan_service.py  test_test_failure_mapping_service.py  test_test_generation_service.py
(+61 files in other folders)
