[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "patchguard"
version = "0.1.0"
description = "Evidence-backed merge-risk reports for GitHub pull requests."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "pydantic>=2.7",
  "requests>=2.31",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.27",
  "ruff>=0.4",
  "bandit>=1.7",
]

[project.scripts]
patchguard = "patchguard.cli:main"

[tool.setuptools.packages.find]
where = ["."]
